# HaskellHW

./: Haskell.cabal  README.md
app/: Main.hs
src/: MyBank.hs  MyLib.hs  MySpotify.hs  ParserCSV.hs
test/: Main.hs
